--- a/frontend/src/components/Breakdown/Breakdown.css
+++ b/frontend/src/components/Breakdown/Breakdown.css
@@ -1,3 +1,10 @@
+.breakdown-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 80vh;
+}
+
 .breakdown {
     width: 40%;
     display: grid;
