--- a/frontend/src/components/Transactions/Transactions.css
+++ b/frontend/src/components/Transactions/Transactions.css
@@ -1,10 +1,17 @@
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 90vh;
+}
+
 .transactions-container {
-    width: 40%;
-    display: grid;
-    margin: 5% 5%;
-    grid-template-rows: repeat(1fr);
-    padding: 2%;
-    box-shadow: 0px 0px 10px #7b7a7a;
-    grid-gap: 20px;
-    border-radius: 8px;
+  width: 40%;
+  display: grid;
+  margin: 5% 5%;
+  grid-template-rows: repeat(1fr);
+  padding: 2%;
+  box-shadow: 0px 3px 25px #7b7a7a;
+  grid-gap: 20px;
+  border-radius: 8px;
 }
